--- a/tomo/templates/404.html
+++ b/tomo/templates/404.html
@@ -1,19 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}
-  Tomo
-{% endblock %}
-
-{% block header %}
-  Stran ne obstaja.
-{% endblock %}
-
-{% block contents %}
-  <p class='instructions'>
-    Vpisali ste naslov strani, ki ne obstaja.
-    Poglejte, če ste naslov vpisali pravilno.
-  </p>
-  <a class='button default' href='{% url homepage %}'>
-    Nazaj na začetek
-  </a>
+{% block content %}
+  <div class="hero-unit">
+    <h1>Stran ne obstaja!</h1>
+    <p>
+      Poglejte, če ste naslov strani vpisali pravilno.
+    </p>
+  </div>
 {% endblock %}
