--- a/tomo/templates/modal/copy_problem.html
+++ b/tomo/templates/modal/copy_problem.html
@@ -7,33 +7,25 @@
   </div>
 
   <form action="{% url copy %}" method="post">
-    <fieldset>
-
   <div class="modal-body">
-    <div class="clearfix">
       {% csrf_token %}
       <input type="hidden" name="problem_id" value="{{ problem.id }}">
-      <label for="normalSelect">Ciljni sklop</label>
-      <div class="input">
-        <select name="problem_set_id" id="normalSelect">
-        {% for course in request.user.taught_courses.all %}
-          <optgroup label="{{ course.name }}">
-          {% for problem_set in course.problem_sets.all %}
-            <option {% if problem_set == problem.problem_set %}selected{% endif %} value="{{ problem_set.id }}">
-              {{ problem_set.title }}
-            </option>
-          {% endfor %}
-          </optgroup>
+      <label>Ciljni sklop</label>
+      <select name="problem_set_id" id="normalSelect">
+      {% for course in request.user.taught_courses.all %}
+        <optgroup label="{{ course.name }}">
+        {% for problem_set in course.problem_sets.all %}
+          <option {% if problem_set == problem.problem_set %}selected{% endif %} value="{{ problem_set.id }}">
+            {{ problem_set.title }}
+          </option>
         {% endfor %}
-        </select>
-      </div>
-    </div><!-- /clearfix -->
+        </optgroup>
+      {% endfor %}
+      </select>
   </div>
 
   <div class="modal-footer">
-    <input type="submit" class="btn primary" value="Kopiraj">
+    <button type="submit" class="btn btn-primary">Kopiraj</button>
   </div>
-
-    </fieldset>
   </form>
 </div>
