--- a/tomo/templates/home.html
+++ b/tomo/templates/home.html
@@ -14,25 +14,25 @@
   </div>
   <div class="row-fluid">
     <div class="span4">
+      <h2>Kako se prijavim?</h2>
+      <p>
+        Tomo je namenjen študentom Fakultete za matematiko in fiziko Univerze v Ljubljani.
+        Prijavite se zgoraj desno in sicer z uporabniškim imenom in geslom, ki ju uporabljate za prijavo na študentske računalnike.
+        Vsi ostali lahko naloge še vedno rešujete anonimno, vendar Tomo vaših rešitev ne bodo shranjeval.
+      </p>
+    </div><!--/span-->
+    <div class="span4">
       <h2>Kje so naloge?</h2>
       <p>
-        Sklop nalog lahko izberete na levi strani.
-        Če na levi strani ne vidite nobenega sklopa, morate v <a href="#settings-form" data-toggle="modal">nastavitvah</a> najprej izbrati vsaj en predmet.
+        Najprej v <a href="#settings-form" data-toggle="modal">nastavitvah</a> izberite predmete, pri katerih sodelujete.
+        Na levi strani boste nato videli sklope nalog, ki so vam namenjeni.
       </p>
     </div><!--/span-->
     <div class="span4">
       <h2>Kako rešujem naloge?</h2>
       <p>
-        S Tomota shranite datoteko z nalogami, jo odprite v ustreznem programu in vanjo začnite pisati svoje rešitve.
-        Vsakič, ko datoteko poženete, vas bo Tomo obvestil o pravilnosti rešitev, hkrati pa bo rešitve tudi shranil.
-      </p>
-    </div><!--/span-->
-    <div class="span4">
-      <h2>Kako se prijavim?</h2>
-      <p>
-        Tomo je zaenkrat namenjen študentom Fakultete za matematiko in fiziko.
-        Prijavite se zgoraj desno in sicer z uporabniškim imenom in geslom, ki ju uporabljate za prijavo na študentske računalnike.
-        Če niste študent ali pa se vam ne uspe prijaviti, lahko naloge še vedno rešujete, vendar se vaše rešitve ne bodo shranjevale.
+        Datoteko z nalogami, ki vsebuje tudi navodila, naložite na svoj računalnik, jo odprite v ustreznem programskem okolju in vanjo vpisujete rešitve.
+        Vsakič, ko datoteko poženete, vas bo Tomo obvestil o pravilnosti rešitev in vaše rešitve tudi shranil.
       </p>
     </div><!--/span-->
   </div><!--/row-->
