Displays instructions when no courses are selected.

--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -112,6 +112,8 @@
                   {% endif %}
                 {% endif %}
               {% endfor %}
+              {% empty %}
+                Preden začnete reševati naloge, v <a href="#settings-form" data-toggle="modal" style="display: inline">nastavitvah</a> izberite predmete, pri katerih sodelujete.
               {% endfor %}
             </ul>
           </div><!--/.well -->
