--- a/tomo/templates/home.html
+++ b/tomo/templates/home.html
@@ -13,7 +13,7 @@
     </p>
   </div>
   <div class="row-fluid">
-    <div class="span4">
+    <div class="span6">
       <h2>Kako se prijavim?</h2>
       <p>
         Tomo je namenjen študentom Fakultete za matematiko in fiziko Univerze v Ljubljani.
@@ -21,18 +21,12 @@
         Vsi ostali lahko naloge še vedno rešujete anonimno, vendar Tomo vaših rešitev ne bodo shranjeval.
       </p>
     </div><!--/span-->
-    <div class="span4">
-      <h2>Kje so naloge?</h2>
-      <p>
-        Najprej v <a href="#settings-form" data-toggle="modal">nastavitvah</a> izberite predmete, pri katerih sodelujete.
-        Na levi strani boste nato videli sklope nalog, ki so vam namenjeni.
-      </p>
-    </div><!--/span-->
-    <div class="span4">
+    <div class="span6">
       <h2>Kako rešujem naloge?</h2>
       <p>
-        Datoteko z nalogami, ki vsebuje tudi navodila, naložite na svoj računalnik, jo odprite v ustreznem programskem okolju in vanjo vpisujete rešitve.
-        Vsakič, ko datoteko poženete, vas bo Tomo obvestil o pravilnosti rešitev in vaše rešitve tudi shranil.
+        Na levi strani izberete sklop nalog, ki ga želite reševati.
+        Datoteko z nalogami, ki vsebuje tudi navodila, naložite na svoj računalnik, jo odprete v ustreznem programskem okolju in vanjo vpisujete rešitve.
+        Vsakič, ko datoteko poženete, vas Tomo obvesti o pravilnosti rešitev in vaše rešitve tudi shrani.
       </p>
     </div><!--/span-->
   </div><!--/row-->
