--- a/tomo/templates/home.html
+++ b/tomo/templates/home.html
@@ -18,7 +18,7 @@
       <p>
         Tomo je namenjen študentom Fakultete za matematiko in fiziko Univerze v Ljubljani.
         Prijavite se zgoraj desno in sicer z uporabniškim imenom in geslom, ki ju uporabljate za prijavo na študentske računalnike.
-        Vsi ostali lahko naloge še vedno rešujete anonimno, vendar Tomo vaših rešitev ne bodo shranjeval.
+        Vsi ostali lahko naloge še vedno rešujete anonimno, vendar Tomo vaših rešitev ne bo shranjeval.
       </p>
     </div><!--/span-->
     <div class="span6">
