Added time filtering for statistics.

--- a/tomo/templates/problem_set.html
+++ b/tomo/templates/problem_set.html
@@ -21,7 +21,7 @@
       <a href="{% url problem_set problem_set.id %}">Naloge</a>
     </li>
     <li>
-      <a href="{% url view_statistics problem_set.id %}">Statistika</a>
+      <a href="{% url view_statistics problem_set.id 120 %}">Statistika</a>
     </li>
   </ul>
   {% endif %}
