--- a/tomo/templates/modal/anonymous_problem_set.html
+++ b/tomo/templates/modal/anonymous_problem_set.html
@@ -1,3 +1,5 @@
+{% load cache %}
+{% cache 1000000 anonymous-problem-set 1 problem_set.id problem_set.timestamp %}
 <div class="modal fade" id="anonymous-download-problem-set-{{ problem_set.id }}">
   <div class="modal-header">
     <a class="close" data-dismiss="modal">×</a>
@@ -18,3 +20,4 @@
     <a href="{% url student_zip problem_set.id %}" class="btn btn-secondary"><i class="icon-check"></i> Reši sklop</a>
   </div>
 </div>
+{% endcache %}
