--- a/tomo/templates/problem_set.html
+++ b/tomo/templates/problem_set.html
@@ -45,6 +45,7 @@
     {% if request.user.is_staff %}
       <h2 id="problem-{{ problem.id }}">
         {{ problem.title }}
+        <a class="icon-share status" href="{% url moss_zip problem.id %}" title="MOSS"></a>
         <a class="icon-edit status" href="{% url teacher_download problem.id %}" title="Uredi nalogo"></a>
         <a class="icon-check status" href="{% url student_download problem.id %}" title="Reši nalogo"></a>
         <a class="icon-cog action" href="{% url admin:tomo_problem_change problem.id %}" title="Napredne nastavitve naloge…"></a>
